--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -6,7 +6,7 @@ on:
     paths: ["pages/**", "components/**", ".github/workflows/storybook.yml"]
 
 jobs:
-  build-and-deploy:
+  deploy-storybook:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
