--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,4 +1,9 @@
 - "!include public_account.yaml"
+- "!include public_group.yaml"
+- "!include public_group_users_view.yaml"
 - "!include public_profile.yaml"
+- "!include public_task.yaml"
 - "!include public_user.yaml"
+- "!include public_user_group.yaml"
+- "!include public_user_groups_view.yaml"
 - "!include public_verification_token.yaml"
