--- a/hasura/docker-compose.yml
+++ b/hasura/docker-compose.yml
@@ -5,12 +5,14 @@
 version: '3.6'
 services:
   postgres:
+    container_name: tasklist_hasura_postgres
     image: postgres:12
     volumes:
-      - hasura_data:/var/lib/postgresql/data
+      - tasklist_hasura:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: postgrespassword
   graphql-engine:
+    container_name: tasklist_hasura
     image: hasura/graphql-engine:v2.0.9
     ports:
       - "8080:8080"
@@ -30,4 +32,4 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: "${HASURA_GRAPHQL_ADMIN_SECRET}"
       HASURA_GRAPHQL_JWT_SECRET: "${HASURA_GRAPHQL_JWT_SECRET}"
 volumes:
-  hasura_data:
+  tasklist_hasura:
