--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "next": "12.0.4",
-    "next-auth": "4.0.0-beta.6",
+    "next-auth": "^4.1.0",
     "next-i18next": "^9.2.0",
     "next-urql": "^3.3.1",
     "postcss": "^8.3.11",
@@ -33,6 +33,7 @@
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.1.1",
     "tailwindcss": "^2.2.19",
+    "tw-elements": "^1.0.0-alpha4",
     "urql": "^2.0.5",
     "yarn": "^1.22.17"
   },
