--- a/hasura/metadata/databases/default/tables/public_user_groups_view.yaml
+++ b/hasura/metadata/databases/default/tables/public_user_groups_view.yaml
@@ -1,3 +1,10 @@
 table:
   name: user_groups_view
   schema: public
+select_permissions:
+- permission:
+    columns: []
+    filter:
+      user_id:
+        _eq: X-Hasura-User-Id
+  role: user
