--- a/hasura/metadata/databases/default/tables/public_group.yaml
+++ b/hasura/metadata/databases/default/tables/public_group.yaml
@@ -20,3 +20,46 @@ array_relationships:
       table:
         name: user_group
         schema: public
+- name: users
+  using:
+    manual_configuration:
+      column_mapping:
+        id: group_id
+      insertion_order: null
+      remote_table:
+        name: group_users_view
+        schema: public
+insert_permissions:
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - name
+    set:
+      created_by: x-hasura-User-Id
+  role: user
+select_permissions:
+- permission:
+    columns:
+    - name
+    - created_at
+    - updated_at
+    - created_by
+    - id
+    filter:
+      user_groups:
+        user:
+          id:
+            _eq: X-Hasura-User-Id
+  role: user
+update_permissions:
+- permission:
+    check: null
+    columns:
+    - name
+    filter:
+      user_groups:
+        user:
+          id:
+            _eq: X-Hasura-User-Id
+  role: user
