--- a/package.json
+++ b/package.json
@@ -12,6 +12,20 @@
     "gen-graphql": "graphql-codegen --config codegen.js"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/embed": "^2.5.0",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
+    "@editorjs/link": "^2.4.0",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/raw": "^2.3.0",
+    "@editorjs/simple-image": "^1.4.1",
+    "@editorjs/table": "^2.0.1",
+    "@editorjs/warning": "^1.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -21,6 +35,7 @@
     "add": "^2.0.6",
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
+    "emoji-picker-react": "^3.5.0",
     "graphql": "^16.0.1",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
@@ -31,6 +46,7 @@
     "postcss": "^8.3.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-editor-js": "^2.0.6",
     "react-hot-toast": "^2.1.1",
     "tailwindcss": "^2.2.19",
     "tw-elements": "^1.0.0-alpha4",
