--- a/hasura/metadata/databases/default/tables/public_group.yaml
+++ b/hasura/metadata/databases/default/tables/public_group.yaml
@@ -40,6 +40,7 @@ insert_permissions:
   role: user
 select_permissions:
 - permission:
+    allow_aggregations: true
     columns:
     - name
     - created_at
