--- a/hasura/metadata/databases/default/tables/public_group_users_view.yaml
+++ b/hasura/metadata/databases/default/tables/public_group_users_view.yaml
@@ -1,3 +1,11 @@
 table:
   name: group_users_view
   schema: public
+select_permissions:
+- permission:
+    columns:
+    - id
+    - image
+    - name
+    filter: {}
+  role: user
