--- a/hasura/metadata/databases/default/tables/public_user_group.yaml
+++ b/hasura/metadata/databases/default/tables/public_user_group.yaml
@@ -8,3 +8,17 @@ object_relationships:
 - name: user
   using:
     foreign_key_constraint_on: user_id
+insert_permissions:
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - group_id
+    - user_id
+  role: user
+select_permissions:
+- permission:
+    columns:
+    - id
+    filter: {}
+  role: user
