--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -6,4 +6,5 @@
 - "!include public_user.yaml"
 - "!include public_user_group.yaml"
 - "!include public_user_groups_view.yaml"
+- "!include public_user_private.yaml"
 - "!include public_verification_token.yaml"
