:construction_worker: Add path restriction for hasura cd

--- a/.github/workflows/migrate-hasura.yml
+++ b/.github/workflows/migrate-hasura.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+    paths: [ "hasura/**", ".github/workflows/migrate-hasura.yml" ]
+
 jobs:
   hasura_migration:
     name: Hasura migration
