--- a/.github/workflows/migrate-hasura.yml
+++ b/.github/workflows/migrate-hasura.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
 
-      - name: Apply hasura migrations
+      - name: Apply hasura migrations --database-name default
         uses: tibotiber/hasura-action@master
         with:
           args: migrate apply
