--- a/hasura/metadata/databases/databases.yaml
+++ b/hasura/metadata/databases/databases.yaml
@@ -1,8 +1,17 @@
+#- name: default
+#  kind: postgres
+#  configuration:
+#    connection_info:
+#      database_url: postgres://postgres:postgrespassword@postgres:5432/postgres
+#      isolation_level: read-committed
+#      use_prepared_statements: false
+#  tables: "!include default/tables/tables.yaml"
+
 - name: default
   kind: postgres
   configuration:
     connection_info:
-      database_url: postgres://postgres:postgrespassword@postgres:5432/postgres
+      database_url: PG_DATABASE_URL1
       isolation_level: read-committed
       use_prepared_statements: false
   tables: "!include default/tables/tables.yaml"
