--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@google-cloud/storage": "^5.18.0",
     "@tailwindcss/forms": "^0.3.4",
     "@urql/exchange-auth": "^0.1.6",
     "add": "^2.0.6",
@@ -51,6 +52,7 @@
     "tailwindcss": "^2.2.19",
     "tw-elements": "^1.0.0-alpha4",
     "urql": "^2.0.5",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
@@ -74,6 +76,7 @@
     "@storybook/theming": "^6.4.0",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
