--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
     "emoji-picker-react": "^3.5.0",
+    "form-data": "^4.0.0",
+    "formidable": "^2.0.1",
     "graphql": "^16.0.1",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
@@ -74,6 +76,7 @@
     "@storybook/manager-webpack5": "^6.4.0",
     "@storybook/react": "^6.4.0",
     "@storybook/theming": "^6.4.0",
+    "@types/formidable": "^2.0.4",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
     "@types/uuid": "^8.3.4",
