--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@google-cloud/storage": "^5.18.0",
+    "@radix-ui/react-popover": "^0.1.6",
     "@tailwindcss/forms": "^0.3.4",
     "@urql/exchange-auth": "^0.1.6",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
-    "emoji-picker-react": "^3.5.0",
+    "emoji-mart": "^3.0.1",
     "form-data": "^4.0.0",
     "formidable": "^2.0.1",
     "graphql": "^16.0.1",
@@ -76,6 +77,7 @@
     "@storybook/manager-webpack5": "^6.4.0",
     "@storybook/react": "^6.4.0",
     "@storybook/theming": "^6.4.0",
+    "@types/emoji-mart": "^3.0.9",
     "@types/formidable": "^2.0.4",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
