--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "17.0.2",
     "react-editor-js": "^2.0.6",
     "react-hot-toast": "^2.1.1",
+    "react-twemoji": "^0.5.0",
     "tailwindcss": "^2.2.19",
     "tw-elements": "^1.0.0-alpha4",
     "urql": "^2.0.5",
@@ -76,6 +77,7 @@
     "@storybook/builder-webpack5": "^6.4.0",
     "@storybook/manager-webpack5": "^6.4.0",
     "@storybook/react": "^6.4.0",
+    "@types/react-twemoji": "^0.4.0",
     "@storybook/theming": "^6.4.0",
     "@types/emoji-mart": "^3.0.9",
     "@types/formidable": "^2.0.4",
