--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@google-cloud/storage": "^5.18.0",
     "@lexical/react": "^0.2.1",
     "@radix-ui/react-popover": "^0.1.6",
+    "@radix-ui/react-separator": "^0.1.4",
     "@tailwindcss/forms": "^0.3.4",
     "@urql/exchange-auth": "^0.1.6",
     "add": "^2.0.6",
